--- a/test.html
+++ b/test.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        <script src="상속_프로토타입.js"></script>
+        <script src="상속.js"></script>
     </body>
 </html>
