--- a/test.html
+++ b/test.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        <script src="async_await.js"></script>
+        <script src="generator.js"></script>
     </body>
 </html>
